# RaylibErosionStandalone

./: CMakeLists.txt  Main.cpp  README.md  build.sh
raylib/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
raylib/examples/: Makefile
raylib/raylib/: Makefile
resources/shaders/: cubemap.vert  skybox.vert
src/: Main.cpp
